--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
-accelerate==0.33.0
-aiohttp==3.10.5
-diffusers==0.32.2
-einops==0.8.0
-mmdet==3.3.0
-numpy==1.24.4
-omegaconf==2.1.2
-open-clip-torch==2.0.2
-opencv-python==4.4.0.42
-openmim==0.3.9
-pytorch-lightning==1.5.0
-scikit-image==0.19.3
-scikit-learn==1.3.2
-taming-transformers==0.0.1
-torch==2.4.0
-torchaudio==2.4.0
-torchmetrics==1.4.2
-torchvision==0.19.0
-transformers==4.43.3
-xformers==0.0.27.post2
+# requirements.txt
+accelerate>=0.25.0
+diffusers>=0.25.0
+einops>=0.7.0
+numpy>=1.26.0
+omegaconf>=2.3.0
+open-clip-torch>=2.24.0
+opencv-python>=4.8.0
+pytorch-lightning>=2.1.0
+scikit-image>=0.22.0
+scikit-learn>=1.3.2
+torch>=2.1.0
+torchvision>=0.16.0
+transformers>=4.36.0
+xformers>=0.0.23; sys_platform == 'linux' or sys_platform == 'win32'
